# TESLA

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  Makefile.tesla  README.txt  TODO  TODO.dot  build_clang.sh  checkers.c  lit.cfg  plans.txt  run-tests  syscalls.c  syscalls.h  tesla.h
cfa/: .gitignore  Makefile  OCamlMakefile  README.txt  dhcp.spl  spl_cfg.ml  spl_dot.ml  spl_lexer.mll  spl_location.ml  spl_ocaml.ml  spl_optimiser.ml  spl_parser.mli  spl_parser.mly  spl_promela.ml  spl_syntaxtree.ml  spl_tesla.ml  spl_typechecker.ml  splc.ml  tcp_connect.spl  tcpc.spl
cmake/: Concatenate.cmake  CopyFiles.cmake  config.h.in
demos/: .gitignore  CMakeLists.txt  lit.local.cfg
doc/: CMakeLists.txt  Doxyfile.in  api.htaccess  doxygen.css  footer.html  header.html  proto2cpp.py
doc/html/: CMakeLists.txt  Makefile.in  build.html  demos.html  environment.html  freebsd.html  index.html  programming.html  tesla.css  uconfig.txt  workflow.html
doc/html/images/: CMakeLists.txt  example-deps.dot.in
include/: CMakeLists.txt  libtesla.h  tesla-macros.h  tesla.h  tesla_state.h
kernel/: 20110315-tesla-src-sys.diff  20110316-tesla-src-sys.diff  20110318-tesla-src-sys.diff  benchmark-clang  cc-tesla.sh  tesla-clang
libtesla/: CMakeLists.txt  Makefile  Makefile.tesla  TODO  tesla_internal.h  tesla_registration.c  tesla_state.c  tesla_state_global.c  tesla_state_perthread.c  tesla_util.c
libtesla/src/: CMakeLists.txt  Makefile  debug.c  iterator.c  key.c  state-global.c  state-perthread.c  state.c  store.c  tesla_class.c  tesla_debug.c  tesla_dtrace.c  tesla_internal.h  tesla_iterator.c  tesla_key.h  tesla_notification.c  tesla_state.c  tesla_state_global.c  tesla_state_perthread.c  tesla_store.c  tesla_strnlen.h  tesla_update.c  tesla_util.c  update.c  util.c
libtesla/test/: CMakeLists.txt  Makefile  TestHarness.h  actions.c  actions.cpp  fork.c  helpers.c  helpers.h  lit.cfg  lit.local.cfg  lookup.c  lookup.cpp  match.c  match.cpp  repeat.c  repeat.cpp  store.c  store.cpp  update.c  update.cpp
scripts/: CMakeLists.txt  build-all-tesla-kernels  build_clang.sh  failures.d  fbsdmake  highlight-transitions  highlight-transitions.py  lit-3.3-junit.patch  lit-head-junit.patch  parse-profile-output  profile.d  tesla  tesla.d  test_support.py  transitions.d
scripts/benchmarking/: benchmark.sh  lmbench.sh  quota.sh  uniqMan.sh  walkTree.sh
src/: Annotations.cpp  Annotations.h  Assertion.cpp  Assertion.h  CMakeLists.txt  CallInstrumentionPass.cc  CallInstrumentionPass.hh  Caller.cpp  Caller.h  EventTranslator.cpp  FieldReference.cpp  FieldReference.h  FunctionBoundaryPass.cc  FunctionBoundaryPass.cpp  FunctionBoundaryPass.h  FunctionBoundaryPass.hh  InstrContext.cpp  InstrContext.h  Instrumentation.cpp  Instrumentation.h  Instrumentation.hh  InstrumentationFn.cc  InstrumentationFn.hh  Instrumenter.cc  Instrumenter.hh  Policy.hh  PolicyFile.cc  PolicyFile.hh  Strings.cc  Strings.hh  instrument.cpp  (+2 more)
tesla/: CMakeLists.txt  Makefile  TODO  Tesla.cpp  Tesla.h  tesla.h  tesla.proto  tesla_registration.h  tesla_state.h  tesla_util.h  tool.cpp
tesla/analyser/: AST.cpp  AST.h  Automata.cpp  CMakeLists.txt  Events.cpp  Expressions.cpp  Helpers.cpp  Makefile  Parser.cpp  Parser.h  Parsers.h  References.cpp  Struct.cpp  Tesla.cpp  Tesla.h  Tool.cpp  Visitor.cpp  Visitor.h  automata.cpp  events.cpp  expressions.cpp  helpers.cpp  parsers.h  references.cpp  tool.cpp
tesla/common/: Automaton.cpp  Automaton.h  CMakeLists.txt  Debug.cpp  Debug.h  Events.cpp  Events.h  Makefile  Manifest.cpp  Manifest.h  Names.cpp  Names.h  Protocol.cpp  Protocol.h  References.cpp  References.h  State.cpp  State.h  SuperFastHash.c  SuperFastHash.h  Tesla.cpp  Tesla.h  Transition.cpp  Transition.h  Types.h  names.h  tesla.proto  yaml.cpp  yaml.h
tesla/common/clang/: Clang.cpp  References.cpp
tesla/instrumenter/: Annotations.cpp  Assertion.cpp  Assertion.h  CMakeLists.txt  Callee.cpp  Callee.h  Caller.cpp  Caller.h  EventTranslator.cpp  EventTranslator.h  FieldReference.cpp  FieldReference.h  InstrContext.cpp  InstrContext.h  Instrumentation.cpp  Instrumentation.h  Instrumenter.h  Makefile  Manifest.cpp  Manifest.h  TeslaInstrumenter.cpp  TranslationFn.cpp  TranslationFn.h  assertion.cpp  assertion.h  callee.cpp  callee.h  caller.cpp  caller.h  instrument.cpp
tesla/test/: CMakeLists.txt  lit.cfg  lit.local.cfg
tesla/test/Automata/: cat.c  cat.tesla  determinise.c  equivalence.c  equivalence.tesla  graph-entry-exit.c  graph-entry-exit.tesla  inclusive-or-repeat1.c  inclusive-or.c  inclusive-or2.c  multicat.c  repeat.c
tesla/test/Instrumentation/: assertion-site.c  bitmask.c  callee.c  callee.ll  caller.c  caller.ll  combining.c  constant-arg.c  field-assign.c  field-lookup.c  free-variables.c  indirection.c  intptr.c  static.c  suppress-debug.c  tesla.manifest
tesla/test/Integration/: call.c  field-assign.c  free-variables-mismatch.c  free-variables.c  hold-missing.c  hold.c  ignored.c  indirection.c  release-missing.c  release.c  static.c  threading.c
tesla/test/Integration/Inputs/: tesla-macros.h
tesla/test/Parsing/: bitmask.c  field-argument.c  free-variables.c  function-call.c  indirection.c  no-such-function.c  previously.c  repeat.c  returnfrom.c  sequence.c  stmt-expr.c  struct-params.c
tesla/test/Regression/: cam.preproc.c  kern-args.ll  kern-args.tesla  kern_cpuset.ll  kern_prot.inclusive-or.tesla  kern_prot.ll  lit.local.cfg  missing-cleanup.tesla  missing-exit-instr.ll  missing-now.ll  snprintf.c
tesla/test/Regression/Inputs/: kern_cpuset.tesla  kern_prot.tesla  missing-exit.tesla  missing-now.tesla
tesla/tools/: CMakeLists.txt  read-manifest.cpp
tesla/tools/cat/: CMakeLists.txt  cat.cpp
tesla/tools/get-triple/: CMakeLists.txt  get-triple.cpp
tesla/tools/graph/: CMakeLists.txt  graph.cpp
tesla/tools/graph-manifest/: CMakeLists.txt  graph-manifest.cpp
tesla/tools/llvm-triple/: CMakeLists.txt  llvm-triple.cpp
tesla/tools/print/: CMakeLists.txt  print.cpp
tesla/tools/read/: CMakeLists.txt  read.cpp
tesla/tools/read-manifest/: CMakeLists.txt  read-manifest.cpp
(+316 files in other folders)
